tests/NormalTests/paczka1/small_fuzzy/82782479.err
Error in line 2: egnFK9hN1 A402 3,0
Error in line 3: egnFK9hN1 A655 38,0
Error in line 9: v3Vo A402 41,9
Error in line 12: A154 A402 188,8
